--- a/practice/css/style.css
+++ b/practice/css/style.css
@@ -31,6 +31,25 @@ a:hover{
   display: block;
 }
 
+/* ================
+top
+================= */
+.top{
+  background-image: url(../img/main-vsual-nontitle.png);
+  background-size: cover;
+  padding: 20px;
+}
+.top-title{
+  font-size: 48px;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.top-subtitle{
+  font-size: 18px;
+  text-align: center;
+}
 
 /* ================
 header
@@ -166,3 +185,95 @@ footer{
   font-size: 12px;
   float: right;
 }
+
+
+/* ================
+スマホ用の表示
+================= */
+@media only screen and  (max-width:767px){
+  .clear::after{
+    content: none;
+  }
+  /* ================
+  header
+  ================= */
+  .header-left{
+    float: none;
+  }
+  .header-title{
+    text-align: center;
+  }
+  .header-right{
+    float: none;
+  }
+  .header-nav{
+    display: flex;
+    justify-content: space-between;
+  }
+  .header-nav-item{
+    float: none;
+    margin: 0;
+  }
+    /* ================
+    top
+    ================= */
+    .top{
+      padding: 120px 0; 
+    }
+    .top-title{
+      font-size: 32px;
+    }
+    .top-subtitle{
+      font-size: 14px;
+    }
+    /* ================
+    section 共通class ※共通部品を探してとりかかる
+    ================= */
+    .section{
+    padding: 80px 0;
+    }
+
+    .section-title{
+    font-size: 24px;
+    }
+    .section p{
+      font-size: 14px;
+    }
+    /* ================
+    about
+    ================= */
+    .about-left{
+      float: none;
+      width: 100%;
+      margin-bottom: 20px;
+    }
+    .about-right{
+      float: none;
+      width: 100%;
+    }
+    /* ================
+    course
+    ================= */
+    .course-wrapper{
+      flex-wrap: wrap;      
+    }
+    .course-item{
+      width: 100%;
+      margin-bottom: 20px;
+    }
+    /* ================
+    contact
+    ================= */
+    input[type="email"]{
+      width: 100%;
+    }
+    /* ================
+    footer
+    ================= */
+  .copyright{
+    font-size: 10px;
+    text-align: center;
+    float: none;  
+  }    
+ }
+
